--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -153,7 +153,7 @@ div p
     li
         background-color panel_color
         font-size main_font_size
-        color heading_color
+        color panel_heading_color
         font-weight bold
         padding 0.5em
         border border_style
@@ -196,7 +196,7 @@ div p
             color link_color
         &:hover
             color hover_color
-        
+
 // form
 label
     display block
@@ -548,7 +548,7 @@ a.moin-conflict:before
 #moin-usersetting-title
     li a
         font-size .84em
-        color heading_color
+        color panel_heading_color
 
 // history page
 #moin-global-history,
@@ -605,7 +605,7 @@ a.moin-conflict:before
     border-top-right-radius 5px
 
 .moin-history-container-header
-    background header_bg_color
+    background table_header_color
     margin 0px
     padding 4px
     color heading_color
@@ -919,7 +919,7 @@ table
         text-align left
     th
         border border_style
-        background-color header_bg_color
+        background-color table_header_color
         color heading_color
     td
         border border_style
@@ -929,7 +929,7 @@ table.zebra
     border-collapse separate
     border-spacing 1px
     thead
-        background-color header_bg_color
+        background-color table_header_color
         color heading_color
     tfoot
         background-color base_color
