--- a/MoinMoin/themes/foobar/static/css/stylus/color_palette.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/color_palette.styl
@@ -2,19 +2,21 @@
 
 font_color = #000000
 base_color = #d6d5d0
-page_color = #f0f0f0
+page_color = #f4f4f4
 border_style = 1px solid border_color
-header_bg_color = #2c2c2a
+header_bg_color = #2d2d2d
 footer_color = #616161
 heading_color = #ffffff
-panel_color = #2c2c2a
+panel_color = #f1f1f1
+panel_heading_color = #696969
 border_color = #cccccc
 shadow_color = #9d9d9b
-table_bg_color = #d0d0d0
-link_color = #4fa8fa
+table_bg_color = #d9d9d9
+table_header_color = #808080
+link_color = #1E90FF
 hover_color = #007cef
 active_color = #51d443
-visited_color = #9787b5
-nonexistent_link_color = #bababa
+visited_color = #5F9EA0
+nonexistent_link_color = #808080
 nonexistent_hover_color = #ff2727
 error_color = #ff2727
