--- a/MoinMoin/themes/foobar/static/css/stylus/moin_diff.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/moin_diff.styl
@@ -7,6 +7,7 @@
 
 .moin-diff-header
     vertical-align top
+    word-wrap break-word
     font-size 92%
 
 .moin-diff-info
@@ -20,25 +21,27 @@
     min-width 5em
 
 .moin-diff-line-number
-    background-color #ffe6e6
+    background-color #E6E6E7
 
 .moin-diff-added
-    background-color #E0FFE0
+    background-color #F0F8FF
     vertical-align top
     width 50%
     white-space pre-wrap
     word-wrap break-word
     font-family monospace
+    padding .5em
     span
-        background-color #80FF80
+        background-color #B5F2B6
 
 .moin-diff-removed
-    background-color #FFFFE0
+    background-color #FFF5EE
     vertical-align top
     width 50%
     white-space pre-wrap
     word-wrap break-word
     font-family monospace
+    padding .5em
     span
-        background-color #FFFF80
+        background-color #F1EEB9
     
