--- a/MoinMoin/themes/foobar/templates/delete.html
+++ b/MoinMoin/themes/foobar/templates/delete.html
@@ -6,10 +6,10 @@
 {{ gen.form.open(form, method="post", action=url_for('frontend.delete_item', item_name=item.name)) }}
   {{ forms.render_errors(form) }}
   <dl>
-    {{ forms.render_field(gen, form['comment'], 'text') }}
+    {{ forms.render(form['comment']) }}
     {{ forms.render_textcha(gen, form) }}
   </dl>
-  {{ gen.input(form['submit'], type='submit') }}
+  {{ forms.render(form['submit']) }}
 {{ gen.form.close() }}
 </div>
 {% endblock %}
