--- a/MoinMoin/themes/foobar/templates/destroy.html
+++ b/MoinMoin/themes/foobar/templates/destroy.html
@@ -7,10 +7,10 @@
     {{ gen.form.open(form, method="post", action=url_for('frontend.destroy_item', item_name=item.name)) }}
       {{ forms.render_errors(form) }}
       <dl>
-        {{ forms.render_field(gen, form['comment'], 'text') }}
+        {{ forms.render(form['comment']) }}
         {{ forms.render_textcha(gen, form) }}
       </dl>
-      {{ gen.input(form['submit'], type='submit') }}
+      {{ forms.render(form['submit']) }}
     {{ gen.form.close() }}
     </div>
 {% else %}
@@ -19,10 +19,10 @@
     {{ gen.form.open(form, method="post", action=url_for('frontend.destroy_item', item_name=item.name, rev=rev_id)) }}
       {{ forms.render_errors(form) }}
       <dl>
-        {{ forms.render_field(gen, form['comment'], 'text') }}
+        {{ forms.render(form['comment']) }}
         {{ forms.render_textcha(gen, form) }}
       </dl>
-      {{ gen.input(form['submit'], type='submit') }}
+      {{ forms.render(form['submit']) }}
     {{ gen.form.close() }}
     </div>
 {% endif %}
