--- a/MoinMoin/themes/foobar/templates/login.html
+++ b/MoinMoin/themes/foobar/templates/login.html
@@ -12,13 +12,13 @@
   {{ gen.input(form['submit'], type='hidden') }}
 
   {% if 'username' in login_inputs %}
-  {{ forms.render_field(gen, form['username'], 'text') }}
+  {{ forms.render(form['username']) }}
   {% endif %}
   {% if 'password' in login_inputs %}
-  {{ forms.render_field(gen, form['password'], 'password') }}
+  {{ forms.render(form['password']) }}
   {% endif %}
 
-  <input type="submit" value="{{ _('Log in') }}" />
+  {{ forms.render(form['submit']) }}
 </dl>
 {{ gen.form.close() }}
 {% endif %}
@@ -29,11 +29,9 @@
 
 {{ gen.form.open(form, method="post", action=url_for('frontend.login')) }}
 <dl>
-  {{ gen.input(form['submit'], type='hidden') }}
-
-  {{ forms.render_field(gen, form['openid'], 'text') }}
-  <input type="submit" value="{{ _('Log in') }}" />
+  {{ forms.render(form['openid']) }}
 </dl>
+{{ forms.render(form['submit']) }}
 {{ gen.form.close() }}
 {% endif %}
 
