--- a/MoinMoin/themes/foobar/templates/lostpass.html
+++ b/MoinMoin/themes/foobar/templates/lostpass.html
@@ -8,10 +8,10 @@
 {{ gen.form.open(form, method="post", action=url_for('frontend.lostpass')) }}
   {{ forms.render_errors(form) }}
   <dl>
-    {{ forms.render_field(gen, form['username'], 'text') }}
-    {{ forms.render_field(gen, form['email'], 'text') }}
+    {{ forms.render(form['username']) }}
+    {{ forms.render(form['email']) }}
   </dl>
-  {{ gen.input(form['submit'], type='submit') }}
+  {{ forms.render(form['submit']) }}
 {{ gen.form.close() }}
 </div>
 {% endblock %}
