--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -122,6 +122,14 @@ div p
     padding 0.3em 0.5em 0.2em 0.5em
     font-weight bold
 
+#moin-interwiki
+    vertical-align middle
+    a
+        vertical-align middle
+
+.sep
+    vertical-align middle
+
 #moin-pagelocation
     vertical-align middle
 
