--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -976,6 +976,60 @@ input#f_comment
     width 96%
     border border_style
     margin .3em 0
+    
+// subitem
+.moin-subitem-navigation
+    overflow hidden
+    display table-cell
+    word-wrap break-word
+    ul
+        display block
+        li
+            padding .4em !important
+        a
+            color link_color
+            font-size 1.2em
+            &:hover
+                text-decoration underline
+    
+.moin-subitem-navigation .sep
+    font-size 1.2em
+    margin-left 0px
+
+.moin-subitem-navigation li ul
+    display none
+    border-left 1px dotted border_color
+    text-indent 10%
+
+.moin-subitem-navigation .expander
+    background url(../img/moin-expand.png) no-repeat center center
+    cursor pointer
+    height 16px
+    overflow hidden
+    vertical-align middle
+    width 16px
+    border hidden
+    text-indent -9000%
+    box-shadow none
+
+.link-action,
+.transclude-action
+    border: hidden
+    text-indent: -9000%
+    padding: 0
+    margin: 0 -2px
+    vertical-align: middle
+    height: 16px
+    width: 16px
+    overflow: hidden
+    cursor: pointer
+    box-shadow none
+
+.link-action
+    background: url(../img/moin-link.png) no-repeat center center
+
+.transclude-action
+    background: url(../img/moin-transclusion.png) no-repeat center center
 
 // text styles
 sub
