--- a/MoinMoin/themes/foobar/templates/local.html
+++ b/MoinMoin/themes/foobar/templates/local.html
@@ -126,7 +126,9 @@
     </li>
     {% endif %}
     <li>
+        {% block subitem_navigation %}
         {{ utils.render_subitem_navigation(item_name, False) }}
+        {% endblock %}
     </li>
 </ul>
 {% endblock %}
