--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -262,17 +262,21 @@ input.blank
     input[type="submit"]
         margin-left 48%
     
-#moin-modify
+#moin-modify, form[name="delete_item"], form[name="rename_item"], form[name="destroy_item"] 
     dd
         margin-left 0.9em
         width 100%
         float none
+        input
+            width 96%
     dt
         float none
         text-align left
         width auto
     input[type="submit"]
         margin-left 0
+    dl
+        margin 0
 
 #moin-options
     dd
