--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -298,13 +298,13 @@ input.blank
     tbody tr 
             th
                 text-align center
-                background table_bg_color
+                background table_header_color
                 margin 2px
             td
                 text-align center
                 background page_color
                 a
-                    color font_color
+                    color link_color
 
 // index page
 .moin-clr
