--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -405,18 +405,16 @@ input.blank
 .moin-select-all
     span
         cursor pointer
-        font-size .84em
 .moin-select-actions
     span
         cursor pointer
-        font-size .84em
     ul
         li
             cursor pointer
+            color link_color !important
 .moin-contenttypes-wrapper
     div
-        cursor pointer
-        font-size .84em
+        cursor pointer 
     form 
         display none
         li
@@ -425,6 +423,7 @@ input.blank
                 display inline
                 vertical-align middle
                 line-height 2em
+                color link_color
             span
                 display none
             &:hover
