--- a/MoinMoin/templates/index.html
+++ b/MoinMoin/templates/index.html
@@ -1,5 +1,5 @@
 {% extends theme("layout.html") %}
-{% import "forms.html" as forms %}
+{% import "forms.html" as forms with context %}
 
 {% if item_name %}
     {% set title = _("Index of subitems of '%(item_name)s'", item_name=item_name) %}
@@ -9,8 +9,7 @@
 
 {% block head_scripts %}
 {{ super() }}
-    <script src="{{ url_for('serve.files', name='jquery_multi_download', filename='jquery.multiDownload.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/index_action.js') }}"></script>
+    <script src="{{ url_for('frontend.template', filename='index_action.js') }}"></script>
 {% endblock %}
 
 {% block content %}
@@ -56,15 +55,19 @@
                         <a href="#" class="filter-toggle">&raquo; {{ _("Toggle") }}</a>
                         <a href="#" class="filter-more">&raquo; {{ _("More") }}</a>
                     </li>
-                    {{ forms.render_filter_field(gen, form['markup_text_items'], 'checkbox', contenttype_groups['markup text items']) }}
-                    {{ forms.render_filter_field(gen, form['other_text_items'], 'checkbox', contenttype_groups['other text items']) }}
-                    {{ forms.render_filter_field(gen, form['image_items'], 'checkbox', contenttype_groups['image items']) }}
-                    {{ forms.render_filter_field(gen, form['audio_items'], 'checkbox', contenttype_groups['audio items']) }}
-                    {{ forms.render_filter_field(gen, form['video_items'], 'checkbox', contenttype_groups['video items']) }}
-                    {{ forms.render_filter_field(gen, form['other_items'], 'checkbox', contenttype_groups['other items']) }}
-                    {{ forms.render_filter_field(gen, form['unknown_items'], 'checkbox', unknown_items_label) }}
+                    {% for e in [
+                        'markup_text_items',
+                        'other_text_items',
+                        'image_items',
+                        'audio_items',
+                        'video_items',
+                        'other_items',
+                        'unknown_items',
+                        ] %}
+                        <li>{{ forms.render(form[e]) }}</li>
+                    {% endfor %}
                 </ul>
-                {{ gen.input(form['submit'], type='submit') }}
+                {{ forms.render(form['submit']) }}
                 {{ gen.form.close() }}
             </div>
             </li>
@@ -117,8 +120,7 @@
             <div>
                 <span class="moin-select-item">&nbsp;</span>
                 {% set mimetype = "application/x.moin.download" %}
-                <a href="about:blank" title="{{ url_for('.download_item', item_name=fullname, mimetype=mimetype) }}"
-                   class="moin-download-link">
+                <a href="{{ url_for('.download_item', item_name=fullname, mimetype=mimetype) }}" class="moin-download-link">
                 </a>
                 <a href="{{ url_for('.show_item', item_name=fullname) }}"
                    class="{{ contenttype|contenttype_to_class }} moin-item"
