--- a/MoinMoin/themes/foobar/templates/index.html
+++ b/MoinMoin/themes/foobar/templates/index.html
@@ -2,7 +2,7 @@
 {% import "forms.html" as forms with context %}
 {% block head_scripts %}
 {{ super() }}
-    <script src="{{ url_for('static', filename='js/index_action.js') }}"></script>
+    <script src="{{ url_for('frontend.template', filename='index_action.js') }}"></script>
 {% endblock %}
 
 {% block local %}
