--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -93,7 +93,7 @@ div p
     padding local_padding_width
     {'border-' + opposite-position(dir)} border_style
 
-#moin-content-with-panel
+#moin-content
     float dir
     width content_width_with_panel
     padding local_padding_width
