--- a/MoinMoin/themes/foobar/templates/local.html
+++ b/MoinMoin/themes/foobar/templates/local.html
@@ -2,7 +2,7 @@
 {% import "utils.html" as utils %}
 
 {% block content_container %}
-<div id="moin-content-with-panel" lang="{{ theme_supp.content_lang }}" dir="{{ theme_supp.content_dir }}">
+<div id="moin-content" lang="{{ theme_supp.content_lang }}" dir="{{ theme_supp.content_dir }}">
     {% block item -%}
         {# If you want itemviews in your template, extend from show.html, not from here. #}
         {% block content %}
