--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -533,6 +533,11 @@ form.upload_file
 
 .file_upload_template .file_upload_start button
     width 0px
+    
+.file_name
+    word-break break-all    
+    word-wrap break-word
+    max-width 10em
 
 .upload-form
     display none
