Foobar them moin-transclusion and comment

--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -415,6 +415,12 @@ input#f_comment{width:96%;border:1px solid #ccc;margin:.3em 0}
 .link-action,.transclude-action{border:hidden;text-indent:-9000%;padding:0;margin:0 -2px;vertical-align:middle;height:16px;width:16px;overflow:hidden;cursor:pointer;box-shadow:none}
 .link-action{background:url("../img/moin-link.png") no-repeat center center}
 .transclude-action{background:url("../img/moin-transclusion.png") no-repeat center center}
+.moin-item-wrapper{position:relative;display:inline-block}
+.moin-item-wrapper > a:hover{color:#1e90ff;text-decoration:none}
+.moin-item-overlay-ul,.moin-item-overlay-lr{display:none;position:absolute;font-size:1.2em;font-weight:bold;margin:0;opacity:.5;filter:alpha;padding:1px;border-color:#1e90ff;border-style:double}
+.moin-item-overlay-ul{top:-4px;left:-4px;border-width:3px 0 0 3px}
+.moin-item-overlay-lr{bottom:-4px;right:-4px;border-width:0 3px 3px 0}
+.moin-item-overlay-ul:hover,.moin-item-overlay-lr:hover{opacity:.8;filter:alpha;background-color:#d6d5d0;color:#1e90ff}
 sub{vertical-align:sub}
 sup{vertical-align:super}
 .moin-big{font-size:1.17em}
