--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -1035,6 +1035,45 @@ input#f_comment
 .transclude-action
     background: url(../img/moin-transclusion.png) no-repeat center center
 
+// transclusion
+.moin-item-wrapper
+    position relative
+    display inline-block
+
+.moin-item-wrapper > a:hover
+    color link_color
+    text-decoration none
+
+.moin-item-overlay-ul,
+.moin-item-overlay-lr
+    display none
+    position absolute
+    font-size 1.2em
+    font-weight bold
+    margin 0
+    opacity .5
+    filter alpha
+    padding 1px
+    border-color link_color
+    border-style double
+
+.moin-item-overlay-ul
+    top -4px
+    left -4px
+    border-width 3px 0 0 3px
+
+.moin-item-overlay-lr
+    bottom -4px
+    right -4px
+    border-width 0 3px 3px 0
+
+.moin-item-overlay-ul:hover,
+.moin-item-overlay-lr:hover
+    opacity .8
+    filter alpha
+    background-color base_color
+    color link_color
+    
 // text styles
 sub
     vertical-align sub
