--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -1074,6 +1074,46 @@ input#f_comment
     background-color base_color
     color link_color
     
+// table of content
+.moin-table-of-contents
+    border border_style
+    background page_color
+    font-size .8em
+    margin 0.5em 0 0.5em 0.5em
+    padding 0.5em
+    text-indent -1em
+    max-width 35%
+    text-align left
+    float right
+    clear both
+    box-shadow 3px 3px 6px shadow_color
+    border-radius 15px
+
+.moin-table-of-contents 
+    ol
+        margin 0
+        padding 0 0 0 .92em
+    li
+        margin .12em 0 0 0
+        padding 0
+        list-style none
+
+.moin-table-of-contents-heading
+    font-weight bold
+    padding 0
+    margin 0 0 0.5em 1em
+    letter-spacing 0.075em
+
+.moin-showhide
+    margin-left 10px
+
+table.navigation
+    float right
+    margin 2px
+
+.moin-permalink
+    display none
+
 // text styles
 sub
     vertical-align sub
