Foobar theme subitem indentation from parent

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -984,7 +984,6 @@ input#f_comment
 // subitem
 .moin-subitem-navigation
     overflow hidden
-    display table-cell
     word-wrap break-word
     ul
         display block
@@ -1003,7 +1002,7 @@ input#f_comment
 .moin-subitem-navigation li ul
     display none
     border-left 1px dotted border_color
-    text-indent 10%
+    padding-left 5% !important
 
 .moin-subitem-navigation .expander
     background url(../img/moin-expand.png) no-repeat center center
