Foobar theme filter botton padding changed from em to percentage

--- a/MoinMoin/themes/foobar/static/css/stylus/main.styl
+++ b/MoinMoin/themes/foobar/static/css/stylus/main.styl
@@ -436,9 +436,9 @@ input.blank
                 font-size 0.8em
             
 #f_contenttype_filter_submit
-    padding-left 3em
-    padding-right 3em
-    margin-left 3em
+    padding-left 20%
+    padding-right 20%
+    margin-left 22%
     cursor pointer
     box-shadow 1px 1px 2px font_color
     &:hover
