--- a/MoinMoin/themes/foobar/static/css/common.css
+++ b/MoinMoin/themes/foobar/static/css/common.css
@@ -257,7 +257,7 @@ input.blank{border-color:#ccc;border-width:2px}
 .moin-contenttypes-wrapper form{display:none;}
 .moin-contenttypes-wrapper form li label{cursor:pointer;display:inline;vertical-align:middle;line-height:2em;color:#1e90ff}
 .moin-contenttypes-wrapper form li span{display:block;font-size:.8em}
-#f_contenttype_filter_submit{padding-left:3em;padding-right:3em;margin-left:3em;cursor:pointer;box-shadow:1px 1px 2px #000;}
+#f_contenttype_filter_submit{padding-left:20%;padding-right:20%;margin-left:22%;cursor:pointer;box-shadow:1px 1px 2px #000;}
 #f_contenttype_filter_submit:hover{box-shadow:1px 1px 2px #9d9d9b}
 .ct-hide:after{content:url("../img/moin-moveup.png");margin:0 .2em;float:right;vertical-align:middle}
 .ct-shown:after{content:url("../img/moin-movedown.png");margin:0 .2em;float:right;vertical-align:middle}
